# journalclub

./: .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
backend/: .dockerignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
backend/django_setup/: asgi.py  settings.py  urls.py  wsgi.py
backend/journal_club/: apps.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/journal_club/migrations/: 0002_alter_episode_description_alter_episode_slug.py  0003_tag_topic_episodetag_episode_topic.py  0004_episode_tags_delete_episodetag.py  0005_episode_image.py  0006_remove_episode_topic_episode_topic.py  0007_rename_topic_episode_topics.py  0008_comment.py  0009_listeninghistory.py  0010_listeninghistory_duration_seconds.py  0011_episode_dislikes_count_episode_likes_count_and_more.py  0012_savedepisode.py
backend/journal_club/templates/journal_club/: episode_detail.html  episode_list.html
backend/journalnotes/: apps.py  models.py  serializers.py  urls.py  views.py
backend/journalnotes/migrations/: 0001_initial.py
backend/users/: authentication.py  models.py  urls.py  utils.py  views.py
backend/users/middleware/: guest_tracking.py
backend/users/migrations/: 0002_guestuser.py  0003_guestuser_linked_user.py
django_setup/: settings.py  urls.py
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  Router.tsx  index.css
journal_club/: models.py  urls.py  views.py
users/: models.py  serializers.py  urls.py  views.py
video_lab/: apps.py
(+39 files in other folders)
